stork/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stork
  name: stork
  namespace: stork
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stork
  template:
    metadata:
      labels:
        app: stork
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: psql-tls-raw
          secret:
            secretName: psql-client-secret
            defaultMode: 416
            optional: true
        - name: psql-tls-shared
          emptyDir:
            medium: Memory
            sizeLimit: 10Mi
        - name: tmp-dir
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
        - name: stork-lib-dir
          emptyDir:
            medium: Memory
            sizeLimit: 100Mi
        - name: run-dir
          emptyDir:
            medium: Memory
            sizeLimit: 100Mi
      containers:
        - name: stork-server
          image: cr.local.ongy.net/stork:latest
          imagePullPolicy: Always
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ["ALL"]
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
            privileged: false
          volumeMounts:
            - mountPath: "/psql-tls-secrets"
              name: psql-tls-shared
            - mountPath: "/tmp"
              name: tmp-dir
            - mountPath: "/var/lib/stork"
              name: stork-lib-dir
            - mountPath: "/run"
              name: run-dir
          readinessProbe:
            httpGet:
              path: /
              port: 8080
        - name: cert-syncer
          image: alpine:latest
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ["ALL"]
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
            privileged: false
          command:
            - sh
            - -c
            - |
              [...]
          volumeMounts:
            - mountPath: /psql-tls-raw
              name: psql-tls-raw
              readOnly: true
            - mountPath: /psql-tls-shared
              name: psql-tls-shared
