stork/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stork
  namespace: stork
spec:
  selector:
    app: stork
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
